tripservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tripservice
  template:
    metadata:
      labels:
        app: tripservice
    spec:
      containers:
        - image: marievrt/tripservice:1
          imagePullPolicy: IfNotPresent
          name: tripservice
          ports:    
            - containerPort: 8080 
      restartPolicy: Always
